--- a/index.html
+++ b/index.html
@@ -325,6 +325,44 @@
                 </div>
             </div>
             <div class="row">
+		<div class="single-recent-blog col-lg-4 col-md-4">
+                    <div class="thumb">
+                        <a href="https://github.com/Vedakeerthi/USO_Stock_Price_Prediction" target="_blank">
+					<img class="f-img img-fluid" src="img/Gold Price Prediction cover image.gif" alt="">
+			</a>
+                    </div>
+                    <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+                        <div class="meta">
+                            August 20, 2022
+                        </div>
+                    </div>
+                    <a href="https://github.com/Vedakeerthi/USO_Stock_Price_Prediction" target="_blank">
+                        <h4>USO ETF Stock Price Forecasting</h4>
+                    </a>
+                    <p>
+                        USO ETF Stock have been forecasted with the help of both machine learning and statistical approach.
+                    </p>
+                </div>
+
+                <div class="single-recent-blog col-lg-4 col-md-4">
+                    <div class="thumb">
+                        <a href="https://github.com/Vedakeerthi/Covid-Fake-news-analysis" target="_blank">
+					<img class="f-img img-fluid" src="img/Fake news Word cloud.jpg" alt="">
+				</a>
+                    </div>
+                    <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+                        <div class="meta">
+                            August 10, 2022
+                        </div>
+                    </div>
+                    <a href="https://github.com/Vedakeerthi/Covid-Fake-news-analysis" target="_blank">
+                        <h4>Covid Fake News Analysis</h4>
+                    </a>
+                    <p>
+                        Covid-19 tweets have been classified into real and fake news using machine learning algorithms.
+                    </p>
+                </div>
 
                 <div class="single-recent-blog col-lg-4 col-md-4">
                     <div class="thumb">
@@ -339,51 +377,12 @@
                         </div>
                     </div>
                     <a href="https://medium.com/@vedakeerthi2002/walmart-sales-analysis-7ca9131fc7e3" target="_blank">
-                        <h4>Walmart Sales Analysis </h4>
+                        <h4>Walmart Sales Analysis</h4>
                     </a>
                     <p>
-                        Data Analysis have been made on the walmart data using the Microsoft Power BI tool.
+                        Data Analysis has been made on the Walmart data using the Microsoft Power BI tool.
                     </p>
-                </div>
-
-                <div class="single-recent-blog col-lg-4 col-md-4">
-                    <div class="thumb">
-                        <a href="https://github.com/Vedakeerthi/Flight_Fare_Prediction" target="_blank">
-					<img class="f-img img-fluid" src="img/flight fare prediction cover image.jpg" alt="">
-				</a>
-                    </div>
-                    <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-                        <div class="meta">
-                            June 20, 2022
-                        </div>
-                    </div>
-                    <a href="https://github.com/Vedakeerthi/Flight_Fare_Prediction" target="_blank">
-                        <h4>End-to-End Flight Fare Prediction model</h4>
-                    </a>
-                    <p>
-                        An End-to-End Web application which is used to predict the flight fare based upon various features in real time and the it has been deployed as an web app in Heroku.
-                    </p>
-                </div>
-
-                <div class="single-recent-blog col-lg-4 col-md-4">
-                    <div class="thumb">
-                        <a href="https://github.com/Vedakeerthi/Attendance-System-using-Face-Recognition" target="_blank">
-					<img class="f-img img-fluid" src="img/Attendance System using Face Recognition Cover image.jpg" alt="">
-				</a>
-                    </div>
-                    <div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-
-                        <div class="meta">
-                            Oct 27, 2021
-                        </div>
-                    </div>
-                    <a href="https://github.com/Vedakeerthi/Attendance-System-using-Face-Recognition" target="_blank">
-                        <h4>Attendance System using Face Recognition</h4>
-                    </a>
-                    <p>
-                        An AI model which is used to record attendance using the faces of the class students, using opencv library and store the record in an excel sheet.
-                    </p>
-                </div>
+        	</div>
             </div>
         </div>
     </section>
